--- a/src/RiseFood.Gestor.Domain/RiseFood.Gestor.Domain.csproj
+++ b/src/RiseFood.Gestor.Domain/RiseFood.Gestor.Domain.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\RiseFood.Core\RiseFood.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
