Implement feature catalogo

--- a/src/RiseFood.App.WebApi/appsettings.json
+++ b/src/RiseFood.App.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=RiseCareDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost;Port=3306;Database=risefood;User=admin;Password=;",
     "GestorDbConnection": "Server=localhost;Port=3309;Database=restodba;User=root;Password=;"
   },
   "Logging": {
