--- a/src/RiseFood.Catalogo.Application/RiseFood.Catalogo.Application.csproj
+++ b/src/RiseFood.Catalogo.Application/RiseFood.Catalogo.Application.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\RiseFood.Core\RiseFood.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
