--- a/src/RiseFood.Catalogo.Data/RiseFood.Catalogo.Data.csproj
+++ b/src/RiseFood.Catalogo.Data/RiseFood.Catalogo.Data.csproj
@@ -5,7 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Repositories" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.2" />
+      <PackageReference Include="MongoDB.Bson" Version="2.10.2" />
+      <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RiseFood.Catalogo.Domain\RiseFood.Catalogo.Domain.csproj" />
     </ItemGroup>
 
 </Project>
