--- a/src/RiseFood.App.WebApi/appsettings.json
+++ b/src/RiseFood.App.WebApi/appsettings.json
@@ -3,6 +3,10 @@
     "DefaultConnection": "Server=localhost;Port=3306;Database=risefood;User=admin;Password=;",
     "GestorDbConnection": "Server=localhost;Port=3309;Database=restodba;User=root;Password=;"
   },
+  "MongoDbSettings": {
+    "Connection": "mongodb://localhost:27017",
+    "DataBase": "RiseFood"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
