--- a/src/RiseFood.WebApi/appsettings.json
+++ b/src/RiseFood.WebApi/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Databases": {
     "RemoteDatabase": {
-      "ConnectionString": "mongodb+srv://dev:rF4qHMhSB6QY1K9P@cluster0-cyux5.mongodb.net/chapinha?retryWrites=true&w=majority",
-      "DataBaseName": "test"
+      "ConnectionString": "mongodb+srv://dev:windows85@cluster0-cyux5.mongodb.net/test?retryWrites=true&w=majority",
+      "DataBaseName": "231424324324234"
     }
   },
   "Logging": {
